--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'ClashRegular';
+    src: url('./assets/fonts/ClashDisplay-Regular.woff2') format('woff2'),
+         url('./assets/fonts/ClashDisplay-Regular.woff') format('woff'),
+         url('./assets/fonts/ClashDisplay-Regular.ttf') format('truetype');
+         font-weight: 400;
+         font-display: swap;
+         font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'Satoshi';
+    src:  url('./assets/fonts/Satoshi-Regular.woff2') format('woff2'),
+          url('./assets/fonts/Satoshi-Regular.woff') format('woff2'),
+          url('./assets/fonts/Satoshi-Regular.ttf') format('truetype')
+  }
